fix: code clean up and add missing functions in result and party class